# job-service

./: .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml
.github/workflows/: deploy.yml  publish-preview.yml  publish-pypi.yml
app/: main.py
app/application/dto/: job_client_dto.py  job_definition_dto.py  job_event_dto.py  job_execution_dto.py
app/application/use_cases/: job_client_use_cases.py  job_definition_use_cases.py  job_event_use_cases.py  job_execution_use_cases.py
app/clients/: job_service_client.py
app/core/: config.py  time.py
app/domain/entities/: job_client.py  job_definition.py  job_event.py  job_execution.py
app/domain/entities/enums/: job_execution_status.py
app/domain/security/: authenticated_user.py  roles.py
app/infrastructure/repository_factory/: register_defaults.py
app/infrastructure/routes/: __init__.py  health_router.py  job_client_router.py  job_definition_router.py  job_event_router.py  job_execution_router.py
app/infrastructure/security/: authorization.py  factory.py
app/infrastructure/security/token_verifiers/: cognito_jwt_verifier.py  memory_jwt_verifier.py
app/realtime/: job_execution_stream.py
app/workers/: __init__.py  inngest_dispatcher.py  registry.py  runner.py
client/: README.md  pyproject.toml
client/src/job_service/: __init__.py  connect_runtime.py  jobs.py  registration.py  workers.py
client/src/job_service_sdk/: __init__.py  client.py  connect_runtime.py  jobs.py  proxy.py  registration.py  workers.py
client/tests/: test_client.py  test_connect_runtime.py  test_proxy.py  test_registration.py
infra/compose/: docker-compose.app.yml  docker-compose.db.yml
tests/: conftest.py  test_client_sdk.py  test_inngest_dispatcher.py  test_server_app_use_cases.py  test_service_registration.py
