[tool.poetry]
name = "job-service-sdk"
version = "1.0.0"
description = "Cliente y runtime para integrarse con job_service"
authors = ["Andrés <andresfserrano1@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "job_service_sdk", from = "src" }]
include = [{ path = "src/job_service_sdk/py.typed", format = ["sdist", "wheel"] }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
keywords = ["jobs", "sdk", "inngest", "client", "workflow"]
homepage = "https://github.com/andresfserrano/job-service"
repository = "https://github.com/andresfserrano/job-service"
documentation = "https://github.com/andresfserrano/job-service#readme"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
jsonschema = "^4.25.0"
inngest = { version = "^0.4.22", extras = ["connect"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
